fixed horizontal scrolling

--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
     background-image: url(/images/connectwork.png);
+    overflow: hidden;
 }
 
 .message {
@@ -18,6 +19,7 @@ body {
     display: flex;
     flex-direction: row-reverse;
     margin: 0px 10px;
+    position: relative;
 }
 
 .opaque {
@@ -32,6 +34,6 @@ body {
 .displayDiv {
     padding: 0;
     margin-top: 15px;
-    transition: 1000ms;
+    position: absolute;
 }
 
